Added Functionality to new_material.dart

--- a/text/en.toml
+++ b/text/en.toml
@@ -37,3 +37,5 @@ label = "Material name"
 submit = "Submit"
 errorNoText = "Please enter some text"
 type = "Choose a material type"
+duplicate = "Looks like a material with that name already exists"
+close = "Close"
