--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,12 +21,12 @@ dependencies:
   flutter_spinkit: ^5.1.0
   path: ^1.8.0
   flutter_material_color_picker: ^1.1.0+2
-  objectdb: ^1.2.1+1
   path_provider: ^2.0.8
-  sembast: ^3.1.1+1
-  sembast_web: ^2.0.1+1
   flutter_svg: ^1.0.0
   rflutter_alert: ^2.0.4
+  hive_flutter: ^1.1.0
+  hive_generator: ^1.1.2
+  build_runner: ^2.1.7
 
 dev_dependencies:
   flutter_test:
