Add logo, update home drawer and README to include it

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,3 +49,7 @@ flutter:
     - family: Comfortaa-Bold
       fonts:
         - asset: assets/fonts/Comfortaa-Bold.ttf
+
+    - family: LiberationSerif
+      fonts:
+        - asset: assets/fonts/LiberationSerif-Regular.ttf
