Add setting for color ui and change org name
ui colors meaning that the accent color of certain pages does not change with the class selected

--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 project(runner LANGUAGES CXX)
 
 set(BINARY_NAME "mindrev")
-set(APPLICATION_ID "com.example.mindrev")
+set(APPLICATION_ID "scratchx98.mindrev")
 
 cmake_policy(SET CMP0063 NEW)
 
