--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = mindrev
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.mindrev
+PRODUCT_BUNDLE_IDENTIFIER = scratchx98.mindrev
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2022 scratchx98. All rights reserved.
