--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,10 @@
 name: mindrev
-description: A study software
+description: A study app
+repository: https://github.com/ScratchX98/Mindrev
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
-version: 1.0.0+1
+version: 0.1.0
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
