--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "scratchx98" "\0"
             VALUE "FileDescription", "mindrev" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "mindrev" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2022 scratchx98. All rights reserved." "\0"
             VALUE "OriginalFilename", "mindrev.exe" "\0"
             VALUE "ProductName", "mindrev" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
