Add themes and finish theme changing in settings
Add SpaceGray and Solarized

--- a/assets/themes.toml
+++ b/assets/themes.toml
@@ -23,3 +23,19 @@ discord.secondaryText = "#FFFFFF"
 discord.accent = "#5865F2"
 discord.accentText = "#FFFFFF"
 
+spacegray.name = "SpaceGray"
+spacegray.primary = "#2B303B"
+spacegray.primaryText = "#C0C5CE"
+spacegray.secondary = "#232830"
+spacegray.secondaryText = "#C0C5CE"
+spacegray.accent = "#8FA1B3"
+spacegray.accentText = "#C0C5CE"
+
+solarized.name = "Solarized"
+solarized.primary = "#073642"
+solarized.primaryText = "#FDF6E3"
+solarized.secondary = "#002B36"
+solarized.secondaryText = "#EEE8D5"
+solarized.accent = "#B58900"
+solarized.accentText = "#002B36"
+
