Fix selected theme bug in settings and add new themes

--- a/assets/themes.toml
+++ b/assets/themes.toml
@@ -7,21 +7,21 @@ mindrev.secondaryText = "#FAFAFA"
 mindrev.accent = "#03A9F4"
 mindrev.accentText = "#FAFAFA"
 
+dark.name = "Dark"
+dark.primary = "#2F2F2F"
+dark.primaryText = "#FAFAFA"
+dark.secondary = "#171717"
+dark.secondaryText = "#FAFAFA"
+dark.accent = "#03A9F4"
+dark.accentText = "#FAFAFA"
+
 light.name = "Light"
 light.primary = "#FAFAFA"
 light.primaryText = "#0B0B0B"
 light.secondary = "#F5F5F5"
 light.secondaryText = "#0B0B0B"
-light.accent = "#B3E5FC"
+light.accent = "#4FC7FD"
 light.accentText = "#0B0B0B"
-
-discord.name = "Discord"
-discord.primary = "#36393F"
-discord.primaryText = "#FFFFFF"
-discord.secondary = "#2F3136"
-discord.secondaryText = "#FFFFFF"
-discord.accent = "#5865F2"
-discord.accentText = "#FFFFFF"
 
 spacegray.name = "SpaceGray"
 spacegray.primary = "#2B303B"
@@ -38,4 +38,12 @@ solarized.secondary = "#002B36"
 solarized.secondaryText = "#EEE8D5"
 solarized.accent = "#B58900"
 solarized.accentText = "#002B36"
+
+andromeda.name = "Andromeda"
+andromeda.primary = "#D5CED9"
+andromeda.primaryText = "#23262e"
+andromeda.secondary = "#23262e"
+andromeda.secondaryText = "#D5CED9"
+andromeda.accent = "#07c1a6"
+andromeda.accentText = "#23262e"
 
