Add flutter_linkify, will start working on about page next

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   hive_flutter: ^1.1.0
   hive_generator: ^1.1.2
   build_runner: ^2.1.7
+  flutter_linkify: ^5.0.2
 
 dev_dependencies:
   flutter_test:
