--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,6 @@ dependencies:
   introduction_screen: ^3.0.0
   responsive_framework: ^0.1.4
   selectable: ^0.1.2
-  easy_sidemenu: ^0.1.1+1
   hexcolor: ^2.0.5
   toml: ^0.12.0
   flutter_spinkit: ^5.1.0
@@ -29,6 +28,7 @@ dependencies:
   hive_generator: ^1.1.2
   build_runner: ^2.1.7
   flutter_linkify: ^5.0.2
+  flash_card: ^0.0.7
 
 dev_dependencies:
   flutter_test:
