--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_linkify: ^5.0.2
   flash_card: ^0.0.7
   scroll_snap_list: ^0.8.4
+  flip_card: ^0.6.0
 
 dev_dependencies:
   flutter_test:
