--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   scroll_snap_list: ^0.8.4
   flip_card: ^0.6.0
   url_launcher: ^6.0.20
+  string_similarity: ^2.0.0
+  confetti: ^0.6.0
 
 dev_dependencies:
   flutter_test:
