--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,18 @@ dependencies:
   url_launcher: ^6.0.20
   string_similarity: ^2.0.0
   confetti: ^0.6.0
+  flutter_launcher_icons: ^0.9.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
+
+flutter_icons:
+  android: true"
+  ios: true
+  image_path: "assets/icon/icon.png"
 
 flutter:
   uses-material-design: true
