Lots of refactoring
Focus on making everything a bit more OOP, small performance improvements like not calling async reads from build with FutureBuilder, but in initState instead. Fix some small bugs. Add more themes and an option to show more/less themes in settings page. Update models to give them methods to display a list of widgets showing their sub models. Use a db file with a local class, in case we need network capabilities in the future.

--- a/assets/materials.toml
+++ b/assets/materials.toml
@@ -1,7 +1,7 @@
 materials = [
 	{name = "Notes", icon = "notes"},
-	{name = "Ordered notes", icon = "ordered_notes"},
+	{name = "Ordered notes", icon = "orderedNotes"},
 	{name = "Flashcards", icon = "flashcards"},
 	{name = "Graphs", icon = "graphs"},
-	{name = "Mind-map", icon = "mind_map"},
+	{name = "Mind-map", icon = "mindMap"},
 ]
