--- a/assets/themes.toml
+++ b/assets/themes.toml
@@ -31,13 +31,21 @@ spacegray.secondaryText = "#C0C5CE"
 spacegray.accent = "#8FA1B3"
 spacegray.accentText = "#232830"
 
-solarized.name = "Solarized"
+solarized.name = "Solarized Dark"
 solarized.primary = "#073642"
 solarized.primaryText = "#FDF6E3"
 solarized.secondary = "#002B36"
 solarized.secondaryText = "#EEE8D5"
 solarized.accent = "#B58900"
 solarized.accentText = "#002B36"
+
+solarizedLight.name = "Solarized Light"
+solarizedLight.primary = "#fdf6e3"
+solarizedLight.primaryText = "#657b83"
+solarizedLight.secondary = "#eee8d5"
+solarizedLight.secondaryText = "#657b83"
+solarizedLight.accent = "#073642"
+solarizedLight.accentText = "#93a1a1"
 
 andromeda.name = "Andromeda"
 andromeda.primary = "#D5CED9"
@@ -55,14 +63,6 @@ darcula.secondaryText = "#AFB1B3"
 darcula.accent = "#C96A2E"
 darcula.accentText = "#2B2B2B"
 
-contrast.name = "Contrast"
-contrast.primary = "#FFFFFF"
-contrast.primaryText = "#171A21"
-contrast.secondary = "#171A21"
-contrast.secondaryText = "#BFC0C0"
-contrast.accent = "#EF8354"
-contrast.accentText = "#FFFFFF"
-
 monokai.name = "Monokai"
 monokai.primary = "#3B3539"
 monokai.primaryText = "#FCFCFA"
@@ -70,5 +70,29 @@ monokai.secondary = "#2D2A2E"
 monokai.secondaryText = "#FCFCFA"
 monokai.accent = "#F4CE63"
 monokai.accentText = "#2D2A2E"
+
+tokyonight.name = "Tokyonight"
+tokyonight.primary = "#24283b"
+tokyonight.primaryText = "#cfc9c2"
+tokyonight.secondary = "#1a1b26"
+tokyonight.secondaryText = "#cfc9c2"
+tokyonight.accent = "#bb9af7"
+tokyonight.accentText = "#cfc9c2"
+
+nord.name = "Nord"
+nord.primary = "#3b4252"
+nord.primaryText = "#eceff4"
+nord.secondary = "#2e3440"
+nord.secondaryText = "#eceff4"
+nord.accent = "#88c0d0"
+nord.accentText = "#4c566a"
+
+polar.name = "Polar"
+polar.primary = "#e5e9f0"
+polar.primaryText = "#434c5e"
+polar.secondary = "#d8dee9"
+polar.secondaryText = "#434c5e"
+polar.accent = "#88c0d0"
+polar.accentText = "#4c566a"
 
 
