Create MindrevNotes object
+ Update Settings object and page in order to switch between markdown and zefyrka editor, add reeder theme and restyle theme file, start on notes and editor files

--- a/assets/themes.toml
+++ b/assets/themes.toml
@@ -1,98 +1,117 @@
-[themes]
-mindrev.name = "Default"
-mindrev.primary = "#FAFAFA"
-mindrev.primaryText = "#0B0B0B"
-mindrev.secondary = "#212121"
-mindrev.secondaryText = "#FAFAFA"
-mindrev.accent = "#03A9F4"
-mindrev.accentText = "#FAFAFA"
+[themes.mindrev]
+name = "Default"
+primary = "#FAFAFA"
+primaryText = "#0B0B0B"
+secondary = "#212121"
+secondaryText = "#FAFAFA"
+accent = "#03A9F4"
+accentText = "#FAFAFA"
 
-dark.name = "Dark"
-dark.primary = "#242323"
-dark.primaryText = "#FAFAFA"
-dark.secondary = "#171717"
-dark.secondaryText = "#FAFAFA"
-dark.accent = "#03A9F4"
-dark.accentText = "#FAFAFA"
+[themes.dark]
+name = "Dark"
+primary = "#242323"
+primaryText = "#FAFAFA"
+secondary = "#171717"
+secondaryText = "#FAFAFA"
+accent = "#03A9F4"
+accentText = "#FAFAFA"
 
-light.name = "Light"
-light.primary = "#FAFAFA"
-light.primaryText = "#0B0B0B"
-light.secondary = "#F5F5F5"
-light.secondaryText = "#0B0B0B"
-light.accent = "#4FC7FD"
-light.accentText = "#0B0B0B"
+[themes.light]
+name = "Light"
+primary = "#FAFAFA"
+primaryText = "#0B0B0B"
+secondary = "#F5F5F5"
+secondaryText = "#0B0B0B"
+accent = "#4FC7FD"
+accentText = "#0B0B0B"
 
-spacegray.name = "SpaceGray"
-spacegray.primary = "#2B303B"
-spacegray.primaryText = "#C0C5CE"
-spacegray.secondary = "#232830"
-spacegray.secondaryText = "#C0C5CE"
-spacegray.accent = "#8FA1B3"
-spacegray.accentText = "#232830"
+[themes.spacegray]
+name = "SpaceGray"
+primary = "#2B303B"
+primaryText = "#C0C5CE"
+secondary = "#232830"
+secondaryText = "#C0C5CE"
+accent = "#8FA1B3"
+accentText = "#232830"
 
-solarized.name = "Solarized Dark"
-solarized.primary = "#073642"
-solarized.primaryText = "#FDF6E3"
-solarized.secondary = "#002B36"
-solarized.secondaryText = "#EEE8D5"
-solarized.accent = "#B58900"
-solarized.accentText = "#002B36"
+[themes.solarized]
+name = "Solarized Dark"
+primary = "#073642"
+primaryText = "#FDF6E3"
+secondary = "#002B36"
+secondaryText = "#EEE8D5"
+accent = "#B58900"
+accentText = "#002B36"
 
-solarizedLight.name = "Solarized Light"
-solarizedLight.primary = "#fdf6e3"
-solarizedLight.primaryText = "#657b83"
-solarizedLight.secondary = "#eee8d5"
-solarizedLight.secondaryText = "#657b83"
-solarizedLight.accent = "#073642"
-solarizedLight.accentText = "#93a1a1"
+[themes.solarizedLight]
+name = "Solarized Light"
+primary = "#fdf6e3"
+primaryText = "#657b83"
+secondary = "#eee8d5"
+secondaryText = "#657b83"
+accent = "#073642"
+accentText = "#93a1a1"
 
-andromeda.name = "Andromeda"
-andromeda.primary = "#D5CED9"
-andromeda.primaryText = "#23262e"
-andromeda.secondary = "#23262e"
-andromeda.secondaryText = "#D5CED9"
-andromeda.accent = "#07c1a6"
-andromeda.accentText = "#23262e"
+[themes.andromeda]
+name = "Andromeda"
+primary = "#D5CED9"
+primaryText = "#23262e"
+secondary = "#23262e"
+secondaryText = "#D5CED9"
+accent = "#07c1a6"
+accentText = "#23262e"
 
-darcula.name = "Darcula"
-darcula.primary = "#313335"
-darcula.primaryText = "#AFB1B3"
-darcula.secondary = "#2B2B2B"
-darcula.secondaryText = "#AFB1B3"
-darcula.accent = "#C96A2E"
-darcula.accentText = "#2B2B2B"
+[themes.darcula]
+name = "Darcula"
+primary = "#313335"
+primaryText = "#AFB1B3"
+secondary = "#2B2B2B"
+secondaryText = "#AFB1B3"
+accent = "#C96A2E"
+accentText = "#2B2B2B"
 
-monokai.name = "Monokai"
-monokai.primary = "#3B3539"
-monokai.primaryText = "#FCFCFA"
-monokai.secondary = "#2D2A2E"
-monokai.secondaryText = "#FCFCFA"
-monokai.accent = "#F4CE63"
-monokai.accentText = "#2D2A2E"
+[themes.monokai]
+name = "Monokai"
+primary = "#3B3539"
+primaryText = "#FCFCFA"
+secondary = "#2D2A2E"
+secondaryText = "#FCFCFA"
+accent = "#F4CE63"
+accentText = "#2D2A2E"
 
-tokyonight.name = "Tokyonight"
-tokyonight.primary = "#24283b"
-tokyonight.primaryText = "#cfc9c2"
-tokyonight.secondary = "#1a1b26"
-tokyonight.secondaryText = "#cfc9c2"
-tokyonight.accent = "#bb9af7"
-tokyonight.accentText = "#cfc9c2"
+[themes.tokyonight]
+name = "Tokyonight"
+primary = "#24283b"
+primaryText = "#cfc9c2"
+secondary = "#1a1b26"
+secondaryText = "#cfc9c2"
+accent = "#bb9af7"
+accentText = "#cfc9c2"
 
-nord.name = "Nord"
-nord.primary = "#3b4252"
-nord.primaryText = "#eceff4"
-nord.secondary = "#2e3440"
-nord.secondaryText = "#eceff4"
-nord.accent = "#88c0d0"
-nord.accentText = "#4c566a"
+[themes.nord]
+name = "Nord"
+primary = "#3b4252"
+primaryText = "#eceff4"
+secondary = "#2e3440"
+secondaryText = "#eceff4"
+accent = "#88c0d0"
+accentText = "#4c566a"
 
-polar.name = "Polar"
-polar.primary = "#e5e9f0"
-polar.primaryText = "#434c5e"
-polar.secondary = "#d8dee9"
-polar.secondaryText = "#434c5e"
-polar.accent = "#88c0d0"
-polar.accentText = "#4c566a"
+[themes.polar]
+name = "Polar"
+primary = "#e5e9f0"
+primaryText = "#434c5e"
+secondary = "#d8dee9"
+secondaryText = "#434c5e"
+accent = "#88c0d0"
+accentText = "#4c566a"
 
+[themes.reeder]
+name = "Reeder"
+primary = "#F9F8F6"
+primaryText = "#635240"
+secondary = "#E8E8E8"
+secondaryText = "#635240"
+accent = "#FC7302"
+accentText = "#F9F8F6"
 
