--- a/text/en.toml
+++ b/text/en.toml
@@ -33,8 +33,11 @@ apply = "Apply"
 ui = "User interface"
 uiColors = "Would you like the accent color of the application to change with the selected class?"
 confetti = "Would you like confetti effects to be displayed?"
+notes = "Notes"
+editor = "How do you prefer making notes?"
+editorZefyrka = "Normal editor"
+editorMarkdown = "Markdown"
 theme = "Theme"
-language = "Language"
 moreThemes = "More themes"
 lessThemes = "Less themes"
 
