--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   confetti: ^0.6.0
   flutter_launcher_icons: ^0.9.2
   intl: ^0.17.0
+  zefyrka: ^1.1.1
+  notus_to_html_to_notus: ^1.0.3
 
 dev_dependencies:
   flutter_test:
