Quality of life changes
Formatting, enlarge icon subject, capitalize display name, hide appbar in markdown editor and preview, change android navigation bar color, move markdown bar above keyboard mobile, fix padding not scrolling markdown editor and preview

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -16,7 +16,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
-	<string>6.0</string>
+	<string>Mindrev</string>
 	<key>CFBundleName</key>
 	<string>mindrev</string>
 	<key>CFBundlePackageType</key>
