Add bulk import option to flashcards and remove normal_editor, leave markdown_editor, add option to hide formatting bar

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_markdown: ^0.6.9+1
   scroll_app_bar: ^2.0.0
   flutter_app_name: ^0.1.1
+  file_picker: ^4.5.1
+  string_splitter: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
