--- a/text/en.toml
+++ b/text/en.toml
@@ -34,9 +34,7 @@ ui = "User interface"
 uiColors = "Would you like the accent color of the application to change with the selected class?"
 confetti = "Would you like confetti effects to be displayed?"
 notes = "Notes"
-editor = "How do you prefer making notes?"
-editorZefyrka = "Normal editor"
-editorMarkdown = "Markdown"
+editor = "Show formatting options in the editor?"
 theme = "Theme"
 moreThemes = "More themes"
 lessThemes = "Less themes"
@@ -110,6 +108,23 @@ title = "New Flashcards"
 new = "Flashcard"
 front = "Front"
 back = "Back"
+
+[flashcards.newFlashcards.bulkImport]
+title = "Bulk import"
+sideSplit = "Split between front and back "
+cardSplit = "Split between cards "
+importData = "Insert data to import"
+preview = "Preview"
+split = "Split"
+tab = "Tab"
+newLine = "New line"
+slash = "Slash"
+comma = "Comma"
+semicolon = "Semicolon"
+colon = "Colon"
+space = "Space"
+point = "Point"
+custom = "Custom"
 
 [flashcards.learnFlashcards]
 title = "Learn"
