--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   introduction_screen: ^3.0.0
-  responsive_framework: ^0.1.4
+  responsive_framework: ^0.2.0
   selectable: ^0.1.2
   hexcolor: ^2.0.5
   toml: ^0.12.0
@@ -32,11 +32,11 @@ dependencies:
   build_runner: ^2.1.7
   flutter_linkify: ^5.0.2
   flash_card: ^0.0.7
-  scroll_snap_list: ^0.8.4
+  scroll_snap_list: ^0.8.6
   flip_card: ^0.6.0
   url_launcher: ^6.0.20
   string_similarity: ^2.0.0
-  confetti: ^0.6.0
+  confetti: ^0.7.0
   flutter_launcher_icons: ^0.9.2
   intl: ^0.17.0
   super_editor: ^0.2.0
@@ -46,6 +46,8 @@ dependencies:
   flutter_app_name: ^0.1.1
   file_picker: ^4.5.1
   string_splitter: ^1.0.0+1
+  flutter_math_fork: ^0.6.2
+  page_transition: ^2.0.5
 
 dev_dependencies:
   flutter_test:
