Change to an ID system instead of a path for material data identification, add an image viewer to notes and improve scrollbar snapping

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   string_splitter: ^1.0.0+1
   flutter_math_fork: ^0.6.2
   page_transition: ^2.0.5
+  easy_image_viewer: ^1.0.4
 
 dev_dependencies:
   flutter_test:
